--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^6.1.6",
